[package]
name = "unf"
version = "2.0.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = """
UNixize Filename -- replace annoying anti-unix characters in filenames"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/io12/unf"

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
regex = "1.3.1"
promptly = "0.1.5"
deunicode = "1.1.0"

[dev-dependencies]
tempdir = "0.3.7"
maplit = "1.0.2"
