[package]
name = "unf"
version = "2.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = """
UNixize Filename -- replace annoying anti-unix characters in filenames"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/io12/unf"

[dependencies]
lazy_static = "1.4.0"
regex = "1.4.0"
promptly = "0.3.0"
deunicode = "1.1.1"
structopt = "0.3.19"
rsfs = "0.4.1"

[dev-dependencies]
tempfile = "3.1.0"
walkdir = "2.3.1"
assert_cmd = "1.0.1"
