[package]
name = "unf"
version = "2.1.4"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2021"
description = """
UNixize Filename -- replace annoying anti-unix characters in filenames"""
readme = "README.md"
license = "MIT"
repository = "https://github.com/io12/unf"

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
promptly = "0.3.1"
deunicode = "1.3.2"
clap = { version = "4.0.18", features = ["derive"] }
rsfs = "0.4.1"

[dev-dependencies]
tempfile = "3.3.0"
walkdir = "2.3.2"
assert_cmd = "2.0.4"
